--- a/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
+++ b/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
@@ -47,7 +47,9 @@
   <ItemGroup>
     <Compile Include="Estagiario.cs" />
     <Compile Include="ExtratorValorDeArgumentosURL.cs" />
+    <Compile Include="Lista.cs" />
     <Compile Include="ListaDeContaCorrente.cs" />
+    <Compile Include="ListaDeObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
