--- a/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
+++ b/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Lista.cs" />
     <Compile Include="ListaDeContaCorrente.cs" />
     <Compile Include="ListaDeObject.cs" />
+    <Compile Include="ListExtensoes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
